Feat: task finisheed x2

--- a/recipes/Pumpkin Cheesecake Cookies.html
+++ b/recipes/Pumpkin Cheesecake Cookies.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Pumpkin Cheesecake Cookies</h1>
-  <img src="/recipes/Pumpkin Cheesecake Cookies photo.webp" alt="Photo of Pumpkin Cookies"></img>
+  <img src="/odin-recipes/recipes/Pumpkin Cheesecake Cookies photo.webp" alt="Photo of Pumpkin Cookies"></img>
 
   <h2>Description</h2>
   These pumpkin cheesecake cookies are wonderfully soft and chewy with a delicious cheesecake center. They taste like fall.
