feat: task finished x4

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <br><Strong><li><a href="/odin-recipes/recipes/Zucchini Brownies.html">Recipe of Zucchini Brownies</a></li></strong></br>
 
-  <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin Cheesecake Cookies.html">Recipe of Pumpkin Cheesecake Cookies.html</a></li></strong></br>
+  <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin Cheesecake Cookies.html">Recipe of Pumpkin Cheesecake Cookies</a></li></strong></br>
 
   <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin Spice Latte Pancakes.html">Recipe of Pumpkin Spice Latte Pancakes</a></li></strong></br>
 
