feat: task finished x8

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 <body>
   <h1>Odin Recipes</h1>
 
-  <br><Strong><li><a href="/odin-recipes/recipes/Zucchini Brownies.html">Recipe of Zucchini Brownies</a></li></strong></br>
+  <ul>
 
-  <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin Cheesecake Cookies.html">Recipe of Pumpkin Cheesecake Cookies</a></li></strong></br>
-
-  <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin Spice Latte Pancakes.html">Recipe of Pumpkin Spice Latte Pancakes</a></li></strong></br>
+    <br><Strong><li><a href="/odin-recipes/recipes/Zucchini_Brownies.html">Recipe of Zucchini Brownies</a></li></strong></br>
+    
+    <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin_Cheesecake_Cookies.html">Recipe of Pumpkin Cheesecake Cookies</a></li></strong></br>
+    
+    <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin_Spice_Latte_Pancakes.html">Recipe of Pumpkin Spice Latte Pancakes</a></li></strong></br>
+  
+  </ul>
 
 </body>
-</html>  
+</html>
