--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <ul>
 
-    <br><Strong><li><a href="/odin-recipes/recipes/Zucchini_Brownies.html">Recipe of Zucchini Brownies</a></li></strong></br>
+    <br><Strong><li><a href="./recipes/Zucchini_Brownies.html">Recipe of Zucchini Brownies</a></li></strong></br>
     
-    <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin_Cheesecake_Cookies.html">Recipe of Pumpkin Cheesecake Cookies</a></li></strong></br>
+    <br><Strong><li><a href="./recipes/Pumpkin_Cheesecake_Cookies.html">Recipe of Pumpkin Cheesecake Cookies</a></li></strong></br>
     
-    <br><Strong><li><a href="/odin-recipes/recipes/Pumpkin_Spice_Latte_Pancakes.html">Recipe of Pumpkin Spice Latte Pancakes</a></li></strong></br>
+    <br><Strong><li><a href="./recipes/Pumpkin_Spice_Latte_Pancakes.html">Recipe of Pumpkin Spice Latte Pancakes</a></li></strong></br>
   
   </ul>
 
