--- a/recipes/Zucchini_Brownies.html
+++ b/recipes/Zucchini_Brownies.html
@@ -3,56 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles.css">
   <title>Zucchini Brownies</title>
 </head>
 <body>
-  <h1>Zucchini Brownies</h1>
-  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F103496.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Photo of Zucchini Brownies"></img>
+  <form>
+    <h1 id="title_brownie">Zucchini Brownies</h1>
+    <div class="img">
+      <img id="browniepng" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F103496.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Photo of Zucchini Brownies"></img>
+    </div>
+    <h2 class="tdescription">Description</h2>
 
-  <h2>Description</h2>
-  These zucchini brownies are deliciously moist and are topped with a yummy chocolate frosting.
+    <p class="description">These zucchini brownies are deliciously moist and are topped with a yummy chocolate frosting.</p>
 
-  <h3>Ingredientes</h3>
-  
-  <ul>
-    <li>1 ½ cups white sugar</li>
-    <li>½ cup vegetable oil</li>
-    <li>2 teaspoons vanilla extract</li>
-    <li>2 cups all-purpose flour</li>
-    <li>½ cup unsweetened cocoa powder</li>
-    <li>1 ½ teaspoons baking soda</li>
-    <li>1 teaspoon salt</li>
-    <li>2 cups shredded zucchini</li>
-    <li>½ cup chopped walnuts</li>
-  </ul>
+    <h3 class="ingredients">Ingredientes</h3>
+    
+    <ul class="ingredients_parts">
+      <li>1 ½ cups white sugar</li>
+      <li>½ cup vegetable oil</li>
+      <li>2 teaspoons vanilla extract</li>
+      <li>2 cups all-purpose flour</li>
+      <li>½ cup unsweetened cocoa powder</li>
+      <li>1 ½ teaspoons baking soda</li>
+      <li>1 teaspoon salt</li>
+      <li>2 cups shredded zucchini</li>
+      <li>½ cup chopped walnuts</li>
+    </ul>
 
-  <h3>Frosting:</h3>
+    <h3 class="frosting">Frosting:</h3>
 
-  <ul>
-    <li>6 tablespoons unsweetened cocoa powder</li>
-    <li>¼ cup butter or margarine</li>
-    <li>2 cups confectioners' sugar</li>
-    <li>¼ cup milk</li>
-    <li>½ teaspoon vanilla extract</li>
-  </ul>
+    <ul>
+      <li>6 tablespoons unsweetened cocoa powder</li>
+      <li>¼ cup butter or margarine</li>
+      <li>2 cups confectioners' sugar</li>
+      <li>¼ cup milk</li>
+      <li>½ teaspoon vanilla extract</li>
+    </ul>
 
-  <h3>Steps</h3>
+    <h3 class="steps">Steps</h3>
 
-  <ol>
+    <ol>
 
-    <br><Strong><li>Step</li></strong>Gather the ingredients. Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x13-inch baking pan.</br>
+      <Strong><li>Step</li></strong><p>Gather the ingredients. Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x13-inch baking pan.</p></br>
 
-    <br><Strong><li>Step</li></strong>Mix sugar, oil, and 2 teaspoons vanilla together in a large bowl until well blended. Combine flour, 1/2 cup cocoa, baking soda, and salt together in a separate bowl; stir into sugar mixture. Fold in zucchini and walnuts; spread batter evenly into the prepared pan.</br>
+      <Strong><li>Step</li></strong><p>Mix sugar, oil, and 2 teaspoons vanilla together in a large bowl until well blended. Combine flour, 1/2 cup cocoa, baking soda, and salt together in a separate bowl; stir into sugar mixture. Fold in zucchini and walnuts; spread batter evenly into the prepared pan.</p></br>
 
-    <br><Strong><li>Step</li></strong>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 25 to 30 minutes. Let cool, about 20 minutes.</br>
+      <Strong><li>Step</li></strong><p>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 25 to 30 minutes. Let cool, about 20 minutes.</p></br>
 
-    <br><Strong><li>Step</li></strong>Meanwhile, make the frosting: Whisk 6 tablespoons of cocoa and butter in a pan over medium-low heat until smooth and glossy; set aside to cool.</br>
+      <Strong><li>Step</li></strong><p>Meanwhile, make the frosting: Whisk 6 tablespoons of cocoa and butter in a pan over medium-low heat until smooth and glossy; set aside to cool.</p></br>
 
-    <br><Strong><li>Step</li></strong>Blend confectioners' sugar, milk, and 1/2 teaspoon vanilla together; stir into cooled cocoa mixture. Spread over cooled brownies before cutting into squares.</br>
+      <Strong><li>Step</li></strong><p>Blend confectioners' sugar, milk, and 1/2 teaspoon vanilla together; stir into cooled cocoa mixture. Spread over cooled brownies before cutting into squares.</p></br>
 
-</ol>
+    </ol>
 
-<h4><a href="/odin-recipes/index.html">Return</a></h4>
-
+    <h4 class="return"><a href="/odin-recipes/index.html">Return</a></h4>
+  </form>
 </body>
 </html>
