--- a/recipes/Zucchini_Brownies.html
+++ b/recipes/Zucchini_Brownies.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="../styles.css">
   <title>Zucchini Brownies</title>
 </head>
-<body>
-  <form>
+<body id="pagebrownie">
+  <form id="formbrownie">
     <h1 id="title_brownie">Zucchini Brownies</h1>
     <div class="img">
       <img id="browniepng" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F103496.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Photo of Zucchini Brownies"></img>
@@ -44,15 +44,15 @@
 
     <ol>
 
-      <Strong><li>Step</li></strong><p>Gather the ingredients. Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x13-inch baking pan.</p></br>
+      <Strong><li class="step">Step</li></strong><p>Gather the ingredients. Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x13-inch baking pan.</p></br>
 
-      <Strong><li>Step</li></strong><p>Mix sugar, oil, and 2 teaspoons vanilla together in a large bowl until well blended. Combine flour, 1/2 cup cocoa, baking soda, and salt together in a separate bowl; stir into sugar mixture. Fold in zucchini and walnuts; spread batter evenly into the prepared pan.</p></br>
+      <Strong><li class="step">Step</li></strong><p>Mix sugar, oil, and 2 teaspoons vanilla together in a large bowl until well blended. Combine flour, 1/2 cup cocoa, baking soda, and salt together in a separate bowl; stir into sugar mixture. Fold in zucchini and walnuts; spread batter evenly into the prepared pan.</p></br>
 
-      <Strong><li>Step</li></strong><p>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 25 to 30 minutes. Let cool, about 20 minutes.</p></br>
+      <Strong><li class="step">Step</li></strong><p>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 25 to 30 minutes. Let cool, about 20 minutes.</p></br>
 
-      <Strong><li>Step</li></strong><p>Meanwhile, make the frosting: Whisk 6 tablespoons of cocoa and butter in a pan over medium-low heat until smooth and glossy; set aside to cool.</p></br>
+      <Strong><li class="step">Step</li></strong><p>Meanwhile, make the frosting: Whisk 6 tablespoons of cocoa and butter in a pan over medium-low heat until smooth and glossy; set aside to cool.</p></br>
 
-      <Strong><li>Step</li></strong><p>Blend confectioners' sugar, milk, and 1/2 teaspoon vanilla together; stir into cooled cocoa mixture. Spread over cooled brownies before cutting into squares.</p></br>
+      <Strong><li class="step">Step</li></strong><p>Blend confectioners' sugar, milk, and 1/2 teaspoon vanilla together; stir into cooled cocoa mixture. Spread over cooled brownies before cutting into squares.</p></br>
 
     </ol>
 
