Feat: task finished

--- a/recipes/Pumpkin_Spice_Latte_Pancakes.html
+++ b/recipes/Pumpkin_Spice_Latte_Pancakes.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles.css">
   <title>Pumpkin Spice Latte Pancakes</title>
 </head>
-<body>
-  <h1>Pumpkin Spice Latte Pancakes</h1>
-  <img src="https://www.allrecipes.com/thmb/R37DJhLE-TTn2wORBjgo9_H4Rp0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8386087_Pumpkin-Spice-Latte-Pancakes_TheDailyGourmet_4x3-ee141c7b4b3e4b66bf31f110d20a4211.jpg" alt="Photo of Pumpkin Pancake"></img>
+<body id="pagepancakes">
+  <form id="formpancakes">
+  <h1 id="title_pancake">Pumpkin Spice Latte Pancakes</h1>
+  <div class="img">
+    <img src="https://www.allrecipes.com/thmb/R37DJhLE-TTn2wORBjgo9_H4Rp0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8386087_Pumpkin-Spice-Latte-Pancakes_TheDailyGourmet_4x3-ee141c7b4b3e4b66bf31f110d20a4211.jpg" alt="Photo of Pumpkin Pancake"></img>
+  </div>
 
-  <h2>Description</h2>
-  These pumpkin spice latte pancakes are perfect for a nippy fall day. The coffee flavor is not overwhelming, but it’s not subtle either! We like them with cinnamon butter and maple syrup.
+  <h2 class="tdescription">Description</h2>
   
-  <h3>Ingredientes</h3>
+  <p class="description">These pumpkin spice latte pancakes are perfect for a nippy fall day. The coffee flavor is not overwhelming, but it’s not subtle either! We like them with cinnamon butter and maple syrup.</p>
   
-  <ul>
+  <h3 class="ingredients">Ingredientes</h3>
+  
+  <ul class="ingredients_parts">
     <li>1 cup milk</li>
     <li>1/2 cup pumpkin puree</li>
     <li>2 large eggs</li>
@@ -29,23 +34,23 @@
     <li>5 tablespoons pure maple syrup, or as needed</li>
   </ul>
 
-  <h3>Steps</h3>
+  <h3 class="steps">Steps</h3>
 
   <ol>
 
-    <br><Strong><li>Step</li></strong>Whisk together milk, pumpkin, eggs, and melted butter in a large bowl until smooth.</br>
+    <br><Strong><li class="step">Step</li></strong> <p>Whisk together milk, pumpkin, eggs, and melted butter in a large bowl until smooth.</p></br>
 
-    <br><Strong><li>Step</li></strong>Whisk together flour, brown sugar, espresso powder, baking powder, pumpkin pie spice, and salt in a bowl.</br>
+    <br><Strong><li class="step">Step</li></strong><p>Whisk together flour, brown sugar, espresso powder, baking powder, pumpkin pie spice, and salt in a bowl.</p></br>
 
-    <br><Strong><li>Step</li></strong>Add dry ingredients to wet ingredients, and stir until moistened. A few lumps are fine.</br>
+    <br><Strong><li class="step">Step</li></strong><p>Add dry ingredients to wet ingredients, and stir until moistened. A few lumps are fine.</p></br>
 
-    <br><Strong><li>Step</li></strong>Heat a lightly oiled griddle over medium heat to 350 degrees F (180 degrees C). Drop batter by large spoonfuls onto the griddle to form 3-inch pancakes. Cook until bubbles form and the edges are dry, 3 to 4 minutes. Flip and cook until browned on the other side, 2 to 3 minutes. Repeat with remaining batter.</br>
+    <br><Strong><li class="step">Step</li></strong><p>Heat a lightly oiled griddle over medium heat to 350 degrees F (180 degrees C). Drop batter by large spoonfuls onto the griddle to form 3-inch pancakes. Cook until bubbles form and the edges are dry, 3 to 4 minutes. Flip and cook until browned on the other side, 2 to 3 minutes. Repeat with remaining batter.</p></br>
 
-    <br><Strong><li>Step</li></strong>Serve warm with cinnamon butter and maple syrup.</br>
+    <br><Strong><li class="step">Step</li></strong><p>Serve warm with cinnamon butter and maple syrup.</p></br>
 
 </ol>
 
-<h4><a href="/odin-recipes/index.html">Return</a></h4>
+<h4 class="return"><a href="/odin-recipes/index.html">Return</a></h4>
 
 </body>
 </html>
