--- a/recipes/Zucchini_Brownies.html
+++ b/recipes/Zucchini_Brownies.html
@@ -32,7 +32,7 @@
 
     <h3 class="frosting">Frosting:</h3>
 
-    <ul>
+    <ul class="frosting_parts">
       <li>6 tablespoons unsweetened cocoa powder</li>
       <li>¼ cup butter or margarine</li>
       <li>2 cups confectioners' sugar</li>
